# kanata

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  Cargo.toml  Dockerfile  Makefile  README.md  build.gradle.kts  docker-compose.yml  go.mod  go.sum  main.go  settings.gradle.kts
.github/: CONTRIBUTING.md
.github/workflows/: codeql.yml  fmt.yml  lint.yml  release.yml
assets/: HEADING  banner.txt
cmd/build-date/: main.go
cmd/kanata/: generate.go  ping.go  root.go  validate.go
contrib/kube/: deployment.yml
daemon/: server.go
daemon/routes/: main.go
docker/: docker-entrypoint.sh  runner.sh
docker/scripts/: liblog.sh
docs/: http.md  index.md
internal/: constants.go
internal/logging/: formatter.go
internal/logging/appenders/: rolling_file.go
internal/request/: request.go
internal/statuspages/: instatus.go
internal/watcher/: kubernetes.go
middleware/: logging.go
scripts/: build-docker.sh  publish-docker.sh  version.sh
scripts/lib/: liblog.sh
server/: server.go
server/routes/api/: entrypoint.go
src/: config.rs  etcd.rs  kube.rs  main.rs  os_signals.rs  version.rs
src/main/kotlin/dev/floofy/services/kanata/: Bootstrap.kt  Kanata.kt  KanataInfo.kt
src/main/kotlin/dev/floofy/services/kanata/data/: ConfigProvider.kt  InstatusConfig.kt  KanataConfig.kt
src/main/kotlin/dev/floofy/services/kanata/kubernetes/: MetricsClient.kt  MetricsWatcher.kt
src/main/kotlin/dev/floofy/services/kanata/providers/: InstatusProvider.kt
src/main/kotlin/dev/floofy/services/kanata/serializers/: InstantSerializer.kt
src/main/resources/: logback.xml
src/metrics/: mod.rs
(+2 files in other folders)
