[package]
name = "kanata"
version = "0.1.0"
edition = "2021"
authors = ["Noel <cutie@floofy.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
kube = "0.61.0"
kube-runtime = "0.61.0"
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
log = "0.4"
pretty_env_logger = "0.3"
serde_yaml = "0.8.21"
serde = "1.0.130"
tokio = "1.12.0"
